<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.avtologistika.test.screens.task.TaskActivity">

    <TextView
        android:id="@+id/id_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/task_id_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/id"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/id_title"
        app:layout_constraintLeft_toRightOf="@+id/id_title"
        app:layout_constraintTop_toTopOf="@+id/id_title"
        tools:text="123124213"/>

    <TextView
        android:id="@+id/number_title"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/task_number_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_title"/>

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/number_title"
        app:layout_constraintLeft_toRightOf="@+id/number_title"
        app:layout_constraintTop_toTopOf="@+id/number_title"
        tools:text="2012/619199"/>

    <TextView
        android:id="@+id/carrier_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textSize="12sp"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/task_carrier_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_title"/>

    <TextView
        android:id="@+id/carrier"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="@+id/carrier_title"
        app:layout_constraintLeft_toRightOf="@+id/carrier_title"
        app:layout_constraintTop_toTopOf="@+id/carrier_title"
        tools:text="KATP 13061 PJSC"/>
    
    <TextView
        android:id="@+id/driver_title"
        android:layout_width="wrap_content"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/task_driver_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carrier_title"/>
    
    <TextView
        android:id="@+id/driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="@+id/driver_title"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@+id/driver_title"
        app:layout_constraintTop_toTopOf="@+id/driver_title"
        tools:text="Чорноостровський Юрій Петрович"/>
    
    <TextView
        android:id="@+id/vin_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/task_vin_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driver_title"/>

    <TextView
        android:id="@+id/vin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="@+id/vin_title"
        app:layout_constraintLeft_toRightOf="@+id/vin_title"
        app:layout_constraintTop_toTopOf="@+id/vin_title"
        tools:text="VF1CRJN0646757203"/>

    <TextView
        android:id="@+id/model_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/task_model_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vin_title"/>

    <TextView
        android:id="@+id/model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="@+id/model_title"
        app:layout_constraintLeft_toRightOf="@+id/model_title"
        app:layout_constraintTop_toTopOf="@+id/model_title"
        tools:text="Clio"/>

    <TextView
        android:id="@+id/model_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textSize="12sp"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/task_model_code_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/model_title"/>

    <TextView
        android:id="@+id/model_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:textSize="12sp"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="@+id/model_code_title"
        app:layout_constraintLeft_toRightOf="@+id/model_code_title"
        app:layout_constraintTop_toTopOf="@+id/model_code_title"
        tools:text="CRJN06"/>

    <TextView
        android:id="@+id/brand_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/task_brand_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/model_code_title"/>

    <TextView
        android:id="@+id/brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:textSize="12sp"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="@+id/brand_title"
        app:layout_constraintLeft_toRightOf="@+id/brand_title"
        app:layout_constraintTop_toTopOf="@+id/brand_title"
        tools:text="Renault"/>

    <TextView
        android:id="@+id/planned_start_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/task_planned_start_date_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brand_title"/>

    <TextView
        android:id="@+id/planned_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:textSize="12sp"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="@+id/planned_start_date_title"
        app:layout_constraintLeft_toRightOf="@+id/planned_start_date_title"
        app:layout_constraintTop_toTopOf="@+id/planned_start_date_title"
        tools:text="2012-03-23 07:30"/>

    <TextView
        android:id="@+id/planned_end_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/task_planned_end_date_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planned_start_date_title"/>

    <TextView
        android:id="@+id/planned_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="@+id/planned_end_date_title"
        app:layout_constraintLeft_toRightOf="@+id/planned_end_date_title"
        app:layout_constraintTop_toTopOf="@+id/planned_end_date_title"
        tools:text="2012-03-23 07:30"/>

    <TextView
        android:id="@+id/actual_start_date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/task_actual_start_date_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/planned_end_date_title"/>

    <TextView
        android:id="@+id/actual_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="@+id/actual_start_date_title"
        app:layout_constraintLeft_toRightOf="@+id/actual_start_date_title"
        app:layout_constraintTop_toTopOf="@+id/actual_start_date_title"
        tools:text="2012-03-23 07:30"/>

    <TextView
        android:id="@+id/actual_end_date_title"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/task_actual_end_date_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actual_start_date_title"/>

    <TextView
        android:id="@+id/actual_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="@+id/actual_end_date_title"
        app:layout_constraintLeft_toRightOf="@+id/actual_end_date_title"
        app:layout_constraintTop_toTopOf="@+id/actual_end_date_title"
        tools:text="2012-03-23 07:30"/>

    <TextView
        android:id="@+id/survey_point_title"
        android:layout_width="wrap_content"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/task_survey_point_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actual_end_date_title"/>

    <TextView
        android:id="@+id/survey_point"
        android:layout_width="wrap_content"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintBottom_toBottomOf="@+id/survey_point_title"
        app:layout_constraintLeft_toRightOf="@+id/survey_point_title"
        app:layout_constraintTop_toTopOf="@+id/survey_point_title"
        tools:text="Avtoleader-M"/>

</android.support.constraint.ConstraintLayout>
